--- a/style.css
+++ b/style.css
@@ -2,42 +2,77 @@ body{
 	margin: 0;
 }
 
-ul{
+li{
 	list-style-type: none;
 	font-size: 3em;
 	line-height: 1.8;
 }
 
+.home{
+	background-image: url(img/home.png);
+	background-size: 100%;
+}
+
+.story{
+	background-image: url(img/story.jpg);
+	background-size: 100%;
+	z-index: 1;
+}
+
+.history{
+	background-image: url(img/history.jpg);
+	background-size: 100%;
+	z-index: 1;
+}
+
+.media{
+	background-image: url(img/media.jpg);
+	background-size: 100%;
+	z-index: 1;
+}
+
+.artist{
+	background-image: url(img/artist.jpg);
+	background-size: 100%;
+	z-index: 1;
+}
+
+.clickMenu{
+	list-style-type: disc;
+	color: red;
+}
+
 #homepage{
 	width: 100%;
 	height: 100vh;
-	background-image: url(img/home.png);
-	background-repeat: no-repeat;
-	background-size: 100%;
+	/*display: flex;
+	align-content: center;*/
 	/*position: relative;*/
+	background-color: white;
+	background-repeat: no-repeat;
 }
 
 #menu{
 	padding-left: 100px;
 	padding-top: 70px;
 	/*width: 100%;*/
-	/*height: 100vh;*/
+	height: 80vh;
 	position: relative;
 	/*background-color: green;*/
-	/*top: 0%;*/
+	top: 0%;
 }
 
 #content{
-	background-color: pink;
+	background: rgba(255, 255, 255, 0.7);
 	padding: 80px;
 	width: 50%;
-	right: 0%;
-	height: 100vh;
+	box-sizing: border-box;
+	height: 70vh;
 	position: absolute;
-	top: 0%;
-	/*display: flex;
-	align-content: center;
-	justify-content: center;*/
+	top: 10%;
+	z-index: -2;
+	text-align:center;
+	font-size: 1.7em;
 }
 
 [x="0"]{left:0%;}
@@ -45,9 +80,3 @@ ul{
 [x="2"]{left:40%;}
 [x="3"]{left:60%;}
 [x="4"]{left:80%;}
-[y="-1"]{top:-20%;}
-[y="0"]{top:0%;}
-[y="1"]{top:20%;}
-[y="2"]{top:40%;}
-[y="3"]{top:60%;}
-[y="4"]{top:80%;}
