--- a/style.css
+++ b/style.css
@@ -2,10 +2,16 @@ body{
 	margin: 0;
 }
 
+img{
+	cursor: pointer;
+}
+
 li{
 	list-style-type: none;
 	font-size: 3em;
 	line-height: 1.8;
+	cursor: pointer;
+	width: 20px;
 }
 
 .home{
