--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ li{
 	width: 20px;
 }
 
+/*a{
+	background-color: black;
+	text-decoration: none;
+	color: white;
+	padding: 10px;
+	margin: 10px;
+}*/
+
 .home{
 	background-image: url(img/home.png);
 	background-size: 100%;
