--- a/style.css
+++ b/style.css
@@ -43,6 +43,26 @@ li{
 	width: 20px;
 }*/
 
+.darkGreen{
+	color: #055464;
+}
+
+.lightGreen{
+	color: #9bd3ca;
+}
+
+.green{
+	color: #099690;
+}
+
+.lightOrange{
+	color: #e1a277;
+}
+
+.darkOrange{
+	color: #e65836;
+}
+
 .a_menu{
 	font-size: 1.5em;
 	line-height: 1.5;
@@ -76,7 +96,7 @@ li{
 
 .obj-h:hover{
 	transform: scale(1.1);
-
+	cursor: pointer;
 }
 
 .media{
@@ -93,7 +113,6 @@ li{
 
 .clickMenu{
 	list-style-type: disc;
-	color: red;
 }
 
 .artistImg01{
@@ -127,8 +146,9 @@ li{
 	position: absolute;
 	top: 130px;
 	left: 30px;
-	font-size: 2em;
+	font-size: 2.7em;
 	line-height: 1.8;
+	color: #055464;
 }
 
 #obj{
