--- a/style.css
+++ b/style.css
@@ -99,30 +99,45 @@ li{
 	z-index: 1;
 }
 
+@keyframes obj-scl{
+	from{transform: scale(1);}
+	to{transform: scale(1.1);}
+}
+
+@keyframes show-obj{
+	from{transform: rotate(10deg) scale(1);}
+	to{transform: rotate(-3600deg) scale(0);}
+}
+
 .obj-h{
 	background-image: url(img/home/obj-h.png);
 	background-size: 100%;
-	z-index: 3;
+	z-index: 2;
 	background-repeat: no-repeat;
+	animation: obj-scl .3s infinite alternate ;
+	transition: all .3s;
 }
 
 .obj-s{
 	background-image: url(img/home/obj-s.png);
 	background-size: 100%;
-	z-index: 3;
+	z-index: 2;
 	background-repeat: no-repeat;
+	animation: obj-scl .3s infinite alternate ;
+	transition: all .3s;
 }
 
 .obj-a{
 	background-image: url(img/home/obj-a.png);
 	background-size: 100%;
-	z-index: 3;
+	z-index: 2;
 	background-repeat: no-repeat;
+	animation: obj-scl .3s infinite alternate ;
+	transition: all .3s;
 }
 
 
 .obj-scale:hover{
-	transform: scale(1.1);
 	cursor: pointer;
 }
 
@@ -149,12 +164,16 @@ li{
 #homepage{
 	width: 100%;
 	height: 100vh;
+	top: 0px;
 	/*display: flex;
 	align-content: center;*/
 	/*position: relative;*/
 	background-color: white;
 	background-repeat: no-repeat;
-	position: relative;
+	position: absolute;
+	z-index: -1;
+	animation: show-obj 2s 1 reverse;
+	transform: scale(1);
 }
 
 /*#menu{
@@ -164,18 +183,18 @@ li{
 }*/
 
 #logo{
-	position: absolute;
+	position: relative;
 	left: 50px;
 	top: 30px;
 }
 
 #listMenu{
-	position: absolute;
-	top: 130px;
+	position: relative;
 	left: 30px;
 	font-size: 2.7em;
 	line-height: 1.8;
 	color: #055464;
+	width: 70px;
 }
 
 #obj{
