--- a/style.css
+++ b/style.css
@@ -166,19 +166,7 @@ li{
 	background-image: url(img/artist/001Re.jpg);
 }
 
-#homepage{
-	width: 100%;
-	height: 100vh;
-	top: 0px;
-	/*display: flex;
-	align-content: center;*/
-	/*position: relative;*/
-	background-color: white;
-	background-repeat: no-repeat;
-	position: absolute;
-	z-index: -1;
-	
-}
+
 
 /*#menu{
 	position: absolute;
@@ -186,20 +174,9 @@ li{
 	top: 0%;
 }*/
 
-#logo{
-	position: relative;
-	left: 50px;
-	top: 30px;
-}
 
-#listMenu{
-	position: relative;
-	left: 30px;
-	font-size: 2.7em;
-	line-height: 1.8;
-	color: #055464;
-	width: 70px;
-}
+
+
 
 #obj{
 	/*background-color: red;*/
@@ -245,4 +222,52 @@ li{
 
 .innerMenu{
 	line-height: 2.3;
+}
+
+@media only screen and (max-width: 375px) {
+  .menu{width: 100%;text-align: center;}
+  #listMenu {
+    font-size: 1.5em;
+    line-height: 1.8;
+    color: #055464;
+    width: 100%;
+    padding-left: 0px;
+}
+#homepage{
+	width: 100%;
+	height: 100vh;
+	background-color: white;
+	background-repeat: no-repeat;
+	position: absolute;
+	z-index: -1;
+	top: auto;
+}
+}
+
+@media only screen and (min-width: 768px) {
+	#logo{
+	position: relative;
+	left: 50px;
+	top: 30px;
+}
+#listMenu{
+	position: relative;
+	left: 30px;
+	font-size: 2.7em;
+	line-height: 1.8;
+	color: #055464;
+	width: 70px;
+}
+#homepage{
+	width: 100%;
+	height: 100vh;
+	top: 0px;
+	/*display: flex;
+	align-content: center;*/
+	/*position: relative;*/
+	background-color: white;
+	background-repeat: no-repeat;
+	position: absolute;
+	z-index: -1;
+}
 }
