--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ li{
 #listMenu{
 	position: relative;
 	left: 30px;
-	font-size: 300%;
+	font-size: 2.7em;
 	line-height: 1.8;
 	color: #055464;
 	width: 70px;
