--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
 
 h1{
 	font-family: Chonburi !important;
+	font-size: 2em;
 }
 
 h2{
@@ -47,6 +48,10 @@ img{
 li{
 	list-style-type: none;
 	cursor: pointer;	
+}
+
+a{
+	text-decoration: none;
 }
 
 @keyframes obj-scl{
@@ -270,6 +275,60 @@ li{
 			z-index: -1;
 			top: auto;
 		}
+		.h-left{
+	width: 30%;
+	height: 100vh;
+	padding: 30px;
+	position: relative;
+	background-color: white;
+	margin: 0px;
+}
+
+.h-menu{
+	width: 20%;
+	height: 100vh;
+	padding: 30px;
+	position: fixed;
+	background-color: white;
+	margin: 0px;
+}
+
+.h-content{
+	width: 80%;/*
+	position: absolute;*/
+	/*background-color: pink;*/
+	padding: 20px;
+}
+
+.h-innerContent{
+	width: 50%;
+	padding-left: 40px;
+	padding-right: 40px;
+	display: inline-block;
+	position: absolute;
+	line-height: 1.7;
+}
+
+.h-section-1{
+	height: 80%;
+	padding: 10px;
+	position: relative;
+}
+
+.h-section-2{
+	height: 80%;
+	padding: 10px;
+	position: relative;
+
+}
+
+.h-section-2 img{
+	float: right;
+}
+
+.full{
+	width: 80%;
+}
 	}
 
 	@media only screen and (min-width: 800px) {
@@ -297,6 +356,60 @@ li{
 	background-repeat: no-repeat;
 	position: absolute;
 	z-index: -1;
+}
+.h-left{
+	width: 30%;
+	height: 100vh;
+	padding: 30px;
+	position: relative;
+	background-color: white;
+	margin: 0px;
+}
+
+.h-menu{
+	width: 20%;
+	height: 100vh;
+	padding: 30px;
+	position: fixed;
+	background-color: white;
+	margin: 0px;
+}
+
+.h-content{
+	width: 80%;/*
+	position: absolute;*/
+	/*background-color: pink;*/
+	padding: 20px;
+}
+
+.h-innerContent{
+	width: 50%;
+	padding-left: 40px;
+	padding-right: 40px;
+	display: inline-block;
+	position: absolute;
+	line-height: 1.7;
+}
+
+.h-section-1{
+	height: 80%;
+	padding: 10px;
+	position: relative;
+}
+
+.h-section-2{
+	height: 80%;
+	padding: 10px;
+	position: relative;
+
+}
+
+.h-section-2 img{
+	float: right;
+}
+
+.full{
+	width: 80%;
 }
 }
 
@@ -363,30 +476,10 @@ li{
 	display: inline-flex;
 }
 
-.h-menu{
-	width: 30%;
-	height: 100vh;
-	padding: 30px;
-	position: relative;
-	background-color: white;
-	margin: 0px;
+.setOpa{
+	opacity: 0;
 }
 
-.h-img{
-	width: 20%;
-	height: 100vh;
-	padding: 20px;
-	position: relative;
-	/*background-color: red;*/
-	top: 0%;
-	justify-content: center;
-	display: inline-grid;
-}
-
-.h-content{
-	width: 50%;
-	height: 100vh;
-	position: relative;
-	/*background-color: pink;*/
-	padding: 20px;
+.setOverflow{
+	overflow: hidden;
 }
