--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 body{
 	margin: 0;
 	font-family: Chonburi !important;
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
 
 h1{
@@ -47,7 +47,8 @@ img{
 
 li{
 	list-style-type: none;
-	cursor: pointer;	
+	cursor: pointer;
+
 }
 
 a{
@@ -108,7 +109,7 @@ a{
 	background-image: url(img/home/obj-home.png);
 	background-size: 100%;
 	background-repeat: no-repeat;
-	animation: show-obj 2s;
+	animation: show-obj 3s;
 	transform: scale(1);
 }
 
@@ -481,5 +482,5 @@ a{
 }
 
 .setOverflow{
-	overflow: hidden;
+	overflow: auto !important;
 }
