--- a/style.css
+++ b/style.css
@@ -1,29 +1,6 @@
-@font-face {
-	font-family: Chonburi;
-	src: url(font/font/chonburi-regular.ttf);
-}
-
-@font-face {
-	font-family: Srinakharinwirot;
-	src: url(font/font/Srinakharinwirot-Regular.otf);
-}
-
-@font-face {
-	font-family: BaiJamjuree;
-	src: url(font/font/BaiJamjuree-Regular.ttf);
-}
-
-.baiJamjuree{
-	font-family: BaiJamjuree !important;
-}
-
-.Srinakharinwirot{
-	font-family: Srinakharinwirot !important;
-}
-
 body{
 	margin: 0;
-	font-family: Chonburi !important;
+	font-family: Winter !important;
 	overflow: hidden;
 }
 
@@ -39,6 +16,7 @@ h2{
 
 p{
 	font-size: 1.2em;
+	font-family: BaiJamjuree;
 }
 
 img{
@@ -51,12 +29,45 @@ li{
 
 }
 
+ul{
+	margin: 0;
+	display: inline-block;
+}
+
 a{
 	text-decoration: none;
 }
-#caption{
-	padding: 30px;
 
+@font-face {
+	font-family: Chonburi;
+	src: url(font/font/chonburi-regular.ttf);
+}
+
+@font-face {
+	font-family: Srinakharinwirot;
+	src: url(font/font/Srinakharinwirot-Regular.otf);
+}
+
+@font-face {
+	font-family: BaiJamjuree;
+	src: url(font/font/BaiJamjuree-Regular.ttf);
+}
+
+@font-face {
+	font-family: Winter;
+	src: url(font/font/Winter_Sans.otf);
+}
+
+.baiJamjuree{
+	font-family: BaiJamjuree !important;
+}
+
+.Srinakharinwirot{
+	font-family: Srinakharinwirot !important;
+}
+
+.Winter{
+	font-family: Winter !important;
 }
 
 @keyframes obj-scl{
@@ -94,12 +105,7 @@ a{
 	color: #e65836;
 }
 
-.a_menu{
-	font-size: 1.5em;
-	line-height: 1.5;
-	width: 25%;
-	margin: 0;
-}
+
 
 .home-1{
 	background-image: url(img/home/bg-home.jpg);
@@ -109,107 +115,347 @@ a{
 	transform: scale(1);
 }
 
-.home-2{
-	background-image: url(img/home/obj-home.png);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	animation: show-obj 3s;
-	transform: scale(1);
-}
-
-
 .story{
 	background-image: url(img/home/story.png);
 	background-size: 100%;
+	background-repeat: no-repeat;
 	z-index: 1;
 }
 
 .history{
 	background-image: url(img/home/history.jpg);
+	background-repeat: no-repeat;
 	background-size: 100%;
 	z-index: 1;
-}
-
-
-
-.obj-h{
-	background-image: url(img/home/obj-h.png);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	animation: obj-scl .5s infinite alternate ;
-	transition: all .5s;
-}
-
-.obj-s{
-	background-image: url(img/home/obj-s.png);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	animation: obj-scl .5s infinite alternate ;
-	transition: all .5s;
-}
-
-.obj-a{
-	background-image: url(img/home/obj-a.png);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	animation: obj-scl .5s infinite alternate ;
-	transition: all .5s;
-}
-
-.obj-m{
-	background-image: url(img/home/obj-m.png);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	animation: obj-scl .5s infinite alternate ;
-	transition: all .5s;
-}
-
-
-.obj-scale:hover{
-	cursor: pointer;
 }
 
 .media{
 	background-image: url(img/home/media.jpg);
 	background-size: 100%;
 	z-index: 1;
+	background-repeat: no-repeat;
 }
 
 .artist{
 	background-image: url(img/home/artist.jpg);
 	background-size: 100%;
+	background-repeat: no-repeat;
 	z-index: 1;
+}
+
+
+
+.obj-scale:hover{
+	cursor: pointer;
 }
 
 .clickMenu{
 	list-style-type: disc;
 }
 
+#obj{
+	width: 100%;
+	height: 100vh;
+}
+
+@media only screen and (max-width: 769px) {
+	#divLogo{
+		/*background-color: white;*/
+		width: 70px;
+		height: 70px;
+	}
+	#logo{
+		width: 100%;
+	}
+	#menuBar{
+		/*background-color: red;*/
+		border: 1px #099690;
+		border-radius: 5px;
+		border-style: none solid solid solid;
+		width: 100%;
+		height: 70px;
+	}
+	#listMenu {
+		font-size: 1.5em;
+		line-height: 1.8;
+		color: #055464;
+		padding-top: 20px;
+		text-align: center;
+	}
+	li{
+		list-style-type: none;
+	}
+	#caption{
+		position: absolute;
+		top: 60%;
+		text-align: center;
+		padding: 10px;
+	}
+	#homepage{
+		width: 100%;
+		height: 100vh;
+		background-color: white;
+		background-repeat: no-repeat;
+		position: absolute;
+		z-index: -1;
+		top: 35%;
+		overflow: hidden;
+	}
+	.home-2{
+		background-image: url(img/home/obj-home.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: show-obj 3s;
+		transform: scale(1);
+	}
+
+	.obj-s{
+		background-image: url(img/home/obj-s.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: obj-scl .5s infinite alternate ;
+		transition: all .5s;
+	}
+
+	.obj-h{
+		background-image: url(img/home/obj-h.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: obj-scl .5s infinite alternate ;
+		transition: all .5s;
+	}
+
+	.obj-m{
+		background-image: url(img/home/obj-m.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: obj-scl .5s infinite alternate ;
+		transition: all .5s;
+	}
+
+	.obj-a{
+		background-image: url(img/home/obj-a.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: obj-scl .5s infinite alternate ;
+		transition: all .5s;
+
+	}
+	
+	.h-left{
+		width: 30%;
+		height: 100vh;
+		padding: 30px;
+		position: relative;
+		background-color: white;
+		margin: 0px;
+	}
+
+	.h-menu{
+		width: 20%;
+		height: 100vh;
+		padding: 30px;
+		position: fixed;
+		background-color: white;
+		margin: 0px;
+	}
+
+	.h-content{
+		width: 80%;
+		padding: 20px;
+	}
+
+	.h-innerContent{
+		width: 50%;
+		padding-left: 40px;
+		padding-right: 40px;
+		display: inline-block;
+		position: absolute;
+		line-height: 1.7;
+	}
+
+	.h-section-1{
+		height: 80%;
+		padding: 10px;
+		position: relative;
+	}
+
+	.h-section-2{
+		height: 80%;
+		padding: 10px;
+		position: relative;
+
+	}
+
+	.h-section-2 img{
+		float: right;
+	}
+
+	.full{
+		width: 80%;
+	}
+}
+/*desktop*/
+@media only screen and (min-width: 770px) {
+	#divLogo{
+		padding-left: 50px;
+		padding-top: 50px;
+	}
+	#menuBar{
+		width: 25%;
+		height: 100vh;
+	}
+	#caption{
+		padding: 30px;
+	}
+	#listMenu{
+		position: relative;
+		left: 30px;
+		font-size: 2.7em;
+		line-height: 1.8;
+		color: #055464;
+		width: 70px;
+	}
+
+	#homepage{
+		width: 100%;
+		top: 0px;
+		background-color: white;
+		background-repeat: no-repeat;
+		position: absolute;
+		z-index: -1;
+		background-size: cover;
+	}
+	.home-2{
+		background-image: url(img/home/obj-home.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: show-obj 3s;
+		transform: scale(1);
+		background-size: cover;
+	}
+
+	.obj-s{
+		background-image: url(img/home/obj-s.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: obj-scl .5s infinite alternate ;
+		transition: all .5s;
+		background-size: cover;
+	}
+
+	.obj-h{
+		background-image: url(img/home/obj-h.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: obj-scl .5s infinite alternate ;
+		transition: all .5s;
+		background-size: cover;
+	}
+
+	.obj-m{
+		background-image: url(img/home/obj-m.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: obj-scl .5s infinite alternate ;
+		transition: all .5s;
+		background-size: cover;
+	}
+
+	.obj-a{
+		background-image: url(img/home/obj-a.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: obj-scl .5s infinite alternate ;
+		transition: all .5s;
+		background-size: cover;
+
+	}
+	.h-left{
+		width: 30%;
+		height: 100vh;
+		padding: 30px;
+		position: relative;
+		background-color: white;
+		margin: 0px;
+	}
+
+	.h-menu{
+		width: 20%;
+		height: 100vh;
+		padding: 30px;
+		position: fixed;
+		background-color: white;
+		margin: 0px;
+	}
+
+	.h-content{
+		width: 80%;
+		padding: 20px;
+	}
+
+	.h-innerContent{
+		width: 50%;
+		padding-left: 40px;
+		padding-right: 40px;
+		display: inline-block;
+		position: absolute;
+		line-height: 1.7;
+	}
+
+	.h-section-1{
+		height: 80%;
+		padding: 10px;
+		position: relative;
+	}
+
+	.h-section-2{
+		height: 80%;
+		padding: 10px;
+		position: relative;
+
+	}
+
+	.h-section-2 img{
+		float: right;
+	}
+
+	.full{
+		width: 80%;
+	}
+}
+
+/*--------------------------------------------------------*/
+
+
+#warp{
+	width: 100%;
+	height: 100vh;
+	position: absolute;
+	float: left;
+	display: inline-flex;
+}
+
+.setOpa{
+	opacity: 0;
+}
+
+.setOverflow{
+	overflow: auto !important;
+}
+
+.a_menu{
+	font-size: 1.5em;
+	line-height: 1.5;
+	width: 25%;
+	margin: 0;
+}
+
 .artistImg01{
 	background-image: url(img/artist/001Re.jpg);
 }
 
-
-
-/*#menu{
-	position: absolute;
-	background-color: green;
-	top: 0%;
-	}*/
-
-
-
-
-
-	#obj{
-		/*background-color: red;*/
-		width: 100%;
-		height: 100vh;
-
-	}
-	/*--------------------------------------------------------------------*/
-
-	#c_art{
+#c_art{
 		/*background: rgba(4, 255, 255, 0.7);*/
 		padding: 50px;
 		width: 70%;
@@ -244,247 +490,13 @@ a{
 	}
 
 	.innerMenu{
-		line-height: 2;
-	}
-
-	.innerMenu li{
-		font-size: 1.5em;
-	}
-
-	.menu{
-		width: 35%;
-	}
-
-
-
-	@media only screen and (max-width: 420px) {
-		#logo{
-			left: 0%;
-			position: relative;
-			width: 15%;
-		}
-		.menu{width: 100%;text-align: center;}
-		#listMenu {
-			font-size: 1.5em;
-			line-height: 1.8;
-			color: #055464;
-			width: 100%;
-			padding-left: 0px;
-		}
-		#homepage{
-			width: 100%;
-			height: 100vh;
-			background-color: white;
-			background-repeat: no-repeat;
-			position: absolute;
-			z-index: -1;
-			top: auto;
-		}
-		.h-left{
-	width: 30%;
-	height: 100vh;
-	padding: 30px;
-	position: relative;
-	background-color: white;
-	margin: 0px;
+	line-height: 2;
 }
 
-.h-menu{
-	width: 20%;
-	height: 100vh;
-	padding: 30px;
-	position: fixed;
-	background-color: white;
-	margin: 0px;
+.innerMenu li{
+	font-size: 1.5em;
 }
 
-.h-content{
-	width: 80%;/*
-	position: absolute;*/
-	/*background-color: pink;*/
-	padding: 20px;
-}
-
-.h-innerContent{
-	width: 50%;
-	padding-left: 40px;
-	padding-right: 40px;
-	display: inline-block;
-	position: absolute;
-	line-height: 1.7;
-}
-
-.h-section-1{
-	height: 80%;
-	padding: 10px;
-	position: relative;
-}
-
-.h-section-2{
-	height: 80%;
-	padding: 10px;
-	position: relative;
-
-}
-
-.h-section-2 img{
-	float: right;
-}
-
-.full{
-	width: 80%;
-}
-	}
-
-	@media only screen and (min-width: 800px) {
-		#logo{
-			position: relative;
-			left: 50px;
-			top: 30px;
-		}
-		#listMenu{
-			position: relative;
-			left: 30px;
-			font-size: 2.7em;
-			line-height: 1.8;
-			color: #055464;
-			width: 70px;
-		}
-		#homepage{
-			width: 100%;
-			height: 100vh;
-			top: 0px;
-	/*display: flex;
-	align-content: center;*/
-	/*position: relative;*/
-	background-color: white;
-	background-repeat: no-repeat;
-	position: absolute;
-	z-index: -1;
-}
-.h-left{
-	width: 30%;
-	height: 100vh;
-	padding: 30px;
-	position: relative;
-	background-color: white;
-	margin: 0px;
-}
-
-.h-menu{
-	width: 20%;
-	height: 100vh;
-	padding: 30px;
-	position: fixed;
-	background-color: white;
-	margin: 0px;
-}
-
-.h-content{
-	width: 80%;/*
-	position: absolute;*/
-	/*background-color: pink;*/
-	padding: 20px;
-}
-
-.h-innerContent{
-	width: 50%;
-	padding-left: 40px;
-	padding-right: 40px;
-	display: inline-block;
-	position: absolute;
-	line-height: 1.7;
-}
-
-.h-section-1{
-	height: 80%;
-	padding: 10px;
-	position: relative;
-}
-
-.h-section-2{
-	height: 80%;
-	padding: 10px;
-	position: relative;
-
-}
-
-.h-section-2 img{
-	float: right;
-}
-
-.full{
-	width: 80%;
-}
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: white;
-  border: 1px #099690;
-  border-radius: 5px;
-  border-style: none solid solid solid;
-  /*box-shadow: 2px 5px 10px #099690;*/
-}
-
-.topnav a {
-  float: right;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: fixed;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-#warp{
-	width: 100%;
-	height: 100vh;
-	position: absolute;
-	float: left;
-	display: inline-flex;
-}
-
-.setOpa{
-	opacity: 0;
-}
-
-.setOverflow{
-	overflow: auto !important;
-}
+/*.menu{
+	width: 35%;
+}*/
