--- a/style.css
+++ b/style.css
@@ -191,6 +191,13 @@ a{
 		text-align: center;
 		padding: 10px;
 	}
+	#clickMe{
+		height: 25vh;
+		width: 100%;
+		position: absolute;
+		top: 35%;
+		left: 0;
+	}
 	#homepage{
 		width: 100%;
 		height: 100vh;
@@ -241,50 +248,44 @@ a{
 		transition: all .5s;
 
 	}
+
+	#h_imgContent{
+		width: 100%;
+	}
 	
 	.h-left{
-		width: 30%;
-		height: 100vh;
-		padding: 30px;
-		position: relative;
-		background-color: white;
-		margin: 0px;
+		display: none;
 	}
 
 	.h-menu{
-		width: 20%;
-		height: 100vh;
-		padding: 30px;
-		position: fixed;
-		background-color: white;
-		margin: 0px;
+		display: none;
 	}
 
 	.h-content{
-		width: 80%;
+		/*width: 80%;*/
 		padding: 20px;
 	}
 
 	.h-innerContent{
-		width: 50%;
 		padding-left: 40px;
 		padding-right: 40px;
 		display: inline-block;
-		position: absolute;
 		line-height: 1.7;
 	}
 
 	.h-section-1{
-		height: 80%;
+		width: 100%;
+		height: 200%;
 		padding: 10px;
 		position: relative;
+		display: -webkit-inline-box;
 	}
 
 	.h-section-2{
-		height: 80%;
+		height: 200%;
 		padding: 10px;
 		position: relative;
-
+		display: -webkit-inline-box;
 	}
 
 	.h-section-2 img{
@@ -292,7 +293,7 @@ a{
 	}
 
 	.full{
-		width: 80%;
+		width: 100%;
 	}
 }
 /*desktop*/
@@ -315,6 +316,14 @@ a{
 		line-height: 1.8;
 		color: #055464;
 		width: 70px;
+	}
+	#clickMe{
+		/*background-color: pink;*/
+		height: 70vh;
+		width: 70%;
+		position: absolute;
+		top: 20%;
+		left: 30%;
 	}
 
 	#homepage{
