--- a/style.css
+++ b/style.css
@@ -271,6 +271,7 @@ a{
 		padding-right: 40px;
 		display: inline-block;
 		line-height: 1.7;
+		background-color: yellow;
 	}
 
 	.h-section-1{
@@ -294,6 +295,12 @@ a{
 
 	.full{
 		width: 100%;
+	}
+	.img-left{
+		background-color: purple;
+		width: 100%;
+		height: 200px;
+		display: inline-block;
 	}
 }
 /*desktop*/
@@ -431,6 +438,10 @@ a{
 
 	.full{
 		width: 80%;
+	}
+	.img-left{
+		width: 40%;
+    	display: inline-block;
 	}
 }
 
