--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ a{
 
 	}
 
-	#h_imgContent{
+	.h_imgContent{
 		width: 100%;
 	}
 	
@@ -276,14 +276,14 @@ a{
 
 	.h-section-1{
 		width: 100%;
-		height: 200%;
+		/*height: 200%;*/
 		padding: 10px;
 		position: relative;
 		display: -webkit-inline-box;
 	}
 
 	.h-section-2{
-		height: 200%;
+		/*height: 200%;*/
 		padding: 10px;
 		position: relative;
 		display: -webkit-inline-box;
@@ -301,6 +301,11 @@ a{
 		width: 100%;
 		height: 200px;
 		display: inline-block;
+	}
+	.img-right{
+		background-color: red;
+		display: inline-block;
+		width: 100%;
 	}
 }
 /*desktop*/
@@ -420,16 +425,32 @@ a{
 	}
 
 	.h-section-1{
-		height: 80%;
 		padding: 10px;
 		position: relative;
 	}
 
 	.h-section-2{
-		height: 80%;
 		padding: 10px;
 		position: relative;
+	}
+	#sec_1{
+		height: 70vh;
+	}
+	#sec_2{
+		height: 70vh;
+	}
+	#sec_3{
+		height: 55vh;
+	}
+	#sec_4{
+		height: 90vh;
+	}
 
+	#sec_5{
+		height: 50vh;
+	}
+	#sec_6{
+		height: 90vh;
 	}
 
 	.h-section-2 img{
