--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ body{
 	overflow: hidden;
 }
 
-/*h1{
+h1{
 	font-family: Chonburi !important;
-	font-size: 2.7em;
-}*/
+	font-size: 2.5em;
+}
 
 h2{
 	margin: 0;
