--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ a{
 	height: 100vh;
 }
 
+/*mobile*/
 @media only screen and (max-width: 812px) {
 	#divLogo{
 		/*background-color: white;*/
@@ -178,7 +179,7 @@ a{
 		height: 70px;
 	}
 	#listMenu {
-		font-size: 1.5em;
+		font-size: 0.7em;
 		line-height: 1.8;
 		color: #055464;
 		padding-top: 20px;
@@ -188,16 +189,17 @@ a{
 		list-style-type: none;
 	}
 	#caption{
-		position: absolute;
-		top: 60%;
+		position: relative;
 		text-align: center;
 		padding: 10px;
+		z-index: 3;
+		top: 360%;
 	}
 	#clickMe{
-		height: 25vh;
+		height: 30vh;
 		width: 100%;
 		position: absolute;
-		top: 35%;
+		top: 45%;
 		left: 0;
 	}
 	#homepage{
@@ -206,8 +208,7 @@ a{
 		background-color: white;
 		background-repeat: no-repeat;
 		position: absolute;
-		z-index: -1;
-		top: 35%;
+		top: 45%;
 		overflow: hidden;
 	}
 	.home-2{
@@ -254,10 +255,6 @@ a{
 	.h_imgContent{
 		width: 100%;
 	}
-	
-	.h-left{
-		display: none;
-	}
 
 	.h-menu{
 		background-color: white;
@@ -282,11 +279,17 @@ a{
 	}
 
 	.h-innerContent{
-		padding-left: 40px;
-		padding-right: 40px;
+		padding-left: 20px;
+		padding-right: 20px;
 		display: inline-block;
 		line-height: 1.7;
 		/*background-color: yellow;*/
+	}
+	.h-innerContent2{
+		padding-left: 20px;
+    	padding-right: 20px;
+    	display: inline-block;
+    	line-height: 1.7;
 	}
 
 	.h-section-1{
@@ -300,8 +303,6 @@ a{
 	.h-section-2{
 		/*height: 200%;*/
 		padding: 10px;
-		position: relative;
-		display: -webkit-inline-box;
 	}
 
 	.h-section-2 img{
@@ -357,7 +358,7 @@ a{
 		width: 40%;
 	}
 	.a-content{
-		width: 100%;
+		/*width: 100%;*/
     	padding: 20px;
     	top: 55px;
     	position: relative;
@@ -369,8 +370,8 @@ a{
 /*desktop*/
 @media only screen and (min-width: 813px) {
 	#divLogo{
-		padding-left: 50px;
-		padding-top: 50px;
+		padding-top: 20px;
+		padding-left: 20px;
 	}
 	#menuBar{
 		width: 25%;
@@ -382,14 +383,14 @@ a{
 	#caption{
 		padding: 30px;
 	}
-	#listMenu{
+	/*#home_inner_menu{
 		position: relative;
 		left: 30px;
 		font-size: 2.7em;
 		line-height: 1.8;
 		color: #055464;
 		width: 70px;
-	}
+	}*/
 	#clickMe{
 		/*background-color: pink;*/
 		height: 70vh;
@@ -454,26 +455,16 @@ a{
 		background-size: cover;
 
 	}
-	.h-left{
-		width: 40%;
-		height: 100vh;
-		padding: 30px;
-		position: relative;
-		background-color: white;
-		margin: 0px;
-	}
 
 	.h-menu{
-		width: 20%;
+		width: 25%;
 		height: 100vh;
 		padding: 30px;
 		position: fixed;
-		background-color: white;
 		margin-left: 30px;
 	}
 	#h-history{
-		padding-left: 40px;
-		left: 30px;
+		left: 40px;
 		position: relative;
 	}
 
@@ -481,11 +472,21 @@ a{
 		/*width: 80%;*/
 		padding: 20px;
 		margin-top: 45px;
+		margin-left: 33%;
 		/*position: relative;*/
 		/*top: 100px;*/
 	}
 
 	.h-innerContent{
+		/*width: 50%;*/
+		padding-left: 40px;
+		padding-right: 40px;
+		display: inline-block;
+		position: absolute;
+		line-height: 1.7;
+	}
+
+	.h-innerContent2{
 		width: 50%;
 		padding-left: 40px;
 		padding-right: 40px;
@@ -533,6 +534,14 @@ a{
 	.img-left{
 		/*width: 35%;*/
     	display: inline-block;
+	}
+
+	.img-right{
+		/*width: 35%;*/
+    	/*display: inline-block;*/
+    	margin: 10px;
+    	position: absolute;
+    	right: 0%;
 	}
 	#backHome{
 		padding-left: 50px;
@@ -586,22 +595,22 @@ a{
 		width: 40%;
 	}
 	.a-content{
-		width: 100%;
     	padding: 20px;
     	top: 55px;
     	position: relative;
+    	margin-left: 30%;
 	}
 }
 
 /*--------------------------------------------------------*/
 
 
-#warp{
-	width: 100%;
+#wrap{
+	/*width: 100%;
 	height: 100vh;
 	position: absolute;
 	float: left;
-	display: inline-flex;
+	display: inline-flex;*/
 }
 
 .setDisplay{
@@ -613,13 +622,20 @@ a{
 }*/
 .innerMenu{
 	line-height: 2;
-	left: 30px;
     position: relative;
 }
 
 .innerMenu li{
 	font-size: 1.3em;
 	padding-right: 40px;
+}
+
+.setBgWhite{
+	background: white;
+}
+
+iframe{
+	padding: 20px;
 }
 
 /*.menu{
