--- a/style.css
+++ b/style.css
@@ -157,13 +157,20 @@ a{
 	list-style-type: disc;
 }
 
-#obj{
-	width: 100%;
-	height: 100vh;
-}
+
 
 /*mobile*/
 @media only screen and (max-width: 812px) {
+	#obj{
+		width: 100%;
+		height: 50vh;
+		display: flex;
+		align-self: flex-end;
+		flex-flow: column wrap;
+		justify-content: space-around;
+		align-items: flex-start;
+		align-self: flex-end;
+	}
 	#divLogo{
 		/*background-color: white;*/
 		width: 70px;
@@ -184,35 +191,41 @@ a{
 		font-size: 0.7em;
 		line-height: 1.8;
 		color: #055464;
-		padding-top: 20px;
+		padding: 10px;
 		text-align: center;
 	}
 	li{
 		list-style-type: none;
 	}
 	#caption{
-		position: relative;
+		position: fixed;
+		bottom: 0%;
+		padding: 20px;
+		padding-left: 30px;
 		text-align: center;
-		padding: 10px;
-		z-index: 3;
-		top: 360%;
 	}
 	#clickMe{
 		height: 30vh;
 		width: 100%;
 		position: absolute;
-		top: 45%;
+		top: 50%;
 		left: 0;
 		z-index: 5;
 	}
 	#homepage{
 		width: 100%;
-		height: 100vh;
-		background-color: white;
+		/*height: 100vh;*/
+		/*background-color: white;*/
 		background-repeat: no-repeat;
-		position: absolute;
-		top: 45%;
+		/*position: absolute;*/
+		/*top: 45%;*/
 		overflow: hidden;
+		display: flex;
+		align-self: flex-end;
+		flex-flow: column wrap;
+		justify-content: space-around;
+		align-items: flex-start;
+		align-self: flex-end;
 	}
 	.home-2{
 		background-image: url(img/home/obj-home.png);
@@ -388,9 +401,23 @@ a{
 		padding: 10px;
 		margin-top: 50px;
 	}
+	.container{
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	/*flex-flow: column wrap;
+	align-items: flex-start;
+	justify-content: space-around;*/
+	align-items: flex-start;
+    justify-content: flex-end;
+}
 }
 /*desktop*/
 @media only screen and (min-width: 813px) {
+	#obj{
+		width: 100%;
+		height: 100vh;
+	}
 	#divLogo{
 		padding-top: 20px;
 		padding-left: 20px;
@@ -673,7 +700,10 @@ a{
 	line-height: 2;
     position: relative;
     left: -20px;
-    display: grid;
+    /*display: grid;*/
+}
+.dropdown-menu{
+	display: grid;
 }
 
 .innerMenu li{
@@ -693,12 +723,3 @@ iframe{
 	display: block;
 }
 
-
-
-/*.dropdown-submenu{
-	display: grid;
-}*/
-
-/*.menu{
-	width: 35%;
-}*/
