--- a/style.css
+++ b/style.css
@@ -608,7 +608,7 @@ a{
 		padding-top: 20px;
 		position: absolute;
 		left: 30px;
-		top: 75%;
+		top: 80%;
 	}
 	.artistName{
 		/*background-color: red;*/
@@ -659,7 +659,7 @@ a{
     	top: 55px;
     	position: relative;
     	margin-left: 30%;
-    	display: inline-block;
+    	/*display: inline-block;*/
 	}
 	.s-content{
 		line-height: 2em;
