--- a/style.css
+++ b/style.css
@@ -84,15 +84,39 @@ a{
 	to{opacity: 0;}
 }
 
-@keyframes show-obj{
-	from{transform: rotate(30deg);}
-	to{transform: rotate(0deg);}
+@keyframes opa{
+	from{opacity: 0}
+	to{opacity: 1}
 }
 
 @keyframes ani-page{
 	from{transform: scale(0.2);}
 	to{transform: scale(1);}
 }
+
+@keyframes a-ani-page{
+	from{right: -70%;}
+	to{right: 0%;}
+}
+
+@keyframes translate-x{
+	from{left: -20%;}
+	to{left: 0%;}
+}
+
+@keyframes rot{
+	from{top: -20%;right: -15%;}
+	to{top: 0%;right: 0%;}
+}
+@keyframes wind{
+	from{top: -50%;right: -35%;}
+	to{top: 50%;right: 100%;}
+}
+@keyframes rotg{
+	from{transform: rotate(10deg);}
+	to{transform: rotate(0deg);}
+}
+
 
 .darkGreen{
 	color: #055464;
@@ -117,7 +141,7 @@ a{
 
 
 .home-1{
-	background-image: url(img/home/bg-home.jpg);
+	background-image: url(img/home/bg-home.png);
 	background-size: 100%;
 	background-repeat: no-repeat;
 	animation: show-bg 1s 1 reverse;
@@ -139,7 +163,7 @@ a{
 }
 
 .media{
-	background-image: url(img/home/media.jpg);
+	background-image: url(img/home/media.png);
 	background-size: 100%;
 	z-index: 1;
 	background-repeat: no-repeat;
@@ -166,7 +190,7 @@ a{
 
 /*mobile*/
 @media only screen and (max-width: 812px) {
-	#obj{
+	.object{
 		width: 100%;
 		height: 30vh;
 		/*display: flex;*/
@@ -232,20 +256,106 @@ a{
 		overflow: hidden;
 		display: flex;
 		align-self: flex-end;
-		flex-flow: column wrap;
-		justify-content: space-around;
-		align-items: flex-start;
-		align-self: flex-end;
 	}
 	.home-2{
-		background-image: url(img/home/obj-home.png);
+		background-image: url(img/home/star.png);
 		background-size: 100%;
 		background-repeat: no-repeat;
-		animation: show-obj 3s;
+		animation: opa 2s infinite;
 		transform: scale(1);
 	}
+	.home-3{
+		background-image: url(img/home/maha.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: translate-x 5s;
+		transform: scale(1);
+	}
+	.home-4{
+		background-image: url(img/home/women.png);
+		/*background-size: 100%;*/
+		background-repeat: no-repeat;
+		animation: rot 3s;
+		transform: scale(1);
+		background-size: cover;
+	}
+	#obj{
+		position: absolute;
 
+	}
+	#obj2{
+		position: absolute;
+		bottom: 0%;
+	}
+	#obj3{
+		position: relative;
+		bottom: 0%;
+	}
 	.obj-s{
+		background-image: url(img/home/sabong.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: rotg 3s infinite;
+		animation-direction: alternate;
+		transition: all .5s;
+	}
+	.obj-s2{
+		background-image: url(img/home/maha-s.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		transition: all .5s;
+		transform: scale(1);
+	}
+	.obj-s3{
+		background-image: url(img/home/leave.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: wind 5s infinite;
+		transition: all .5s;
+	}
+
+	.obj-h{
+		background-image: url(img/home/obj-h.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: obj-scl 1s infinite alternate ;
+		transition: all .5s;
+	}
+
+	.obj-m{
+		background-image: url(img/home/1-m.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		/*animation: translate-x 1s;*/
+		transition: all .5s;
+		position: relative;
+		right: 27%;
+	}
+	.obj-m2{
+		background-image: url(img/home/2-m.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: translate-x 2s;
+		transition: all .5s;
+	}
+	.obj-m3{
+		background-image: url(img/home/3-m.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: translate-x 3s;
+		transition: all .5s;
+	}
+
+	.obj-a{
+		background-image: url(img/home/obj-a.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: obj-scl 1s infinite alternate ;
+		transition: all .5s;
+
+	}
+
+	/*.obj-s{
 		background-image: url(img/home/obj-s.png);
 		background-size: 100%;
 		background-repeat: no-repeat;
@@ -276,7 +386,7 @@ a{
 		animation: obj-scl .5s infinite alternate ;
 		transition: all .5s;
 
-	}
+	}*/
 
 	.h_imgContent{
 		width: 100%;
@@ -404,15 +514,16 @@ a{
 		padding: 30px;
 		text-align: center;
 		color: white;
+		margin-top: 55px;
 	}
-	.a-footer{
+	/*.a-footer{
 		margin-left: 0;
 		background: #099690;
 		text-align: center;
 		padding: 30px;
 		margin-top: 50px;
 		color: white;
-	}
+	}*/
 	.container{
 	width: 100%;
 	height: 100vh;
@@ -426,7 +537,7 @@ a{
 }
 /*desktop*/
 @media only screen and (min-width: 813px) {
-	#obj{
+	.object{
 		width: 100%;
 		height: 100vh;
 	}
@@ -477,19 +588,58 @@ a{
 		overflow: hidden;
 	}
 	.home-2{
-		background-image: url(img/home/obj-home.png);
+		background-image: url(img/home/star.png);
 		background-size: 100%;
 		background-repeat: no-repeat;
-		animation: show-obj 3s;
+		animation: opa 2s infinite;
 		transform: scale(1);
 		background-size: cover;
 	}
-
-	.obj-s{
-		background-image: url(img/home/obj-s.png);
+	.home-3{
+		background-image: url(img/home/maha.png);
 		background-size: 100%;
 		background-repeat: no-repeat;
-		animation: obj-scl 1s infinite alternate ;
+		animation: translate-x 5s;
+		transform: scale(1);
+		background-size: cover;
+	}
+	.home-4{
+		background-image: url(img/home/women.png);
+		/*background-size: 100%;*/
+		background-repeat: no-repeat;
+		animation: rot 3s;
+		transform: scale(1);
+		background-size: cover;
+	}
+	#obj2{
+		position: absolute;
+		top: 0%;
+	}
+	#obj3{
+		position: absolute;
+		top: 0%;
+	}
+
+	.obj-s{
+		background-image: url(img/home/sabong.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: rotg 3s infinite;
+		animation-direction: alternate;
+		transition: all .5s;
+		background-size: cover;
+	}
+	.obj-s2{
+		background-image: url(img/home/maha-s.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		background-size: cover;
+	}
+	.obj-s3{
+		background-image: url(img/home/leave.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: wind 5s infinite;
 		transition: all .5s;
 		background-size: cover;
 	}
@@ -504,10 +654,28 @@ a{
 	}
 
 	.obj-m{
-		background-image: url(img/home/obj-m.png);
+		background-image: url(img/home/1-m.png);
 		background-size: 100%;
 		background-repeat: no-repeat;
-		animation: obj-scl 1s infinite alternate ;
+		/*animation: translate-x 1s;*/
+		transition: all .5s;
+		background-size: cover;
+		position: relative;
+		right: 27%;
+	}
+	.obj-m2{
+		background-image: url(img/home/2-m.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: translate-x 2s;
+		transition: all .5s;
+		background-size: cover;
+	}
+	.obj-m3{
+		background-image: url(img/home/3-m.png);
+		background-size: 100%;
+		background-repeat: no-repeat;
+		animation: translate-x 3s;
 		transition: all .5s;
 		background-size: cover;
 	}
@@ -552,7 +720,7 @@ a{
 
 	.h-innerContent{
 		/*width: 50%;*/
-		padding-right: 40px;
+		padding-right: 65px;
 		display: inline-block;
 		/*position: absolute;*/
 		line-height: 1.7;
@@ -595,7 +763,7 @@ a{
 	.img-left{
 		/*width: 35%;*/
     	display: inline-block;
-    	padding-right: 50px;
+    	padding-right: 65px;
 	}
 
 	.img-right{
@@ -607,7 +775,7 @@ a{
 	}
 	#backHome{
 		padding-left: 50px;
-		/*padding-top: 20px;*/
+		padding-top: 20px;
 		/*position: absolute;*/
 		/*left: 30px;*/
 		top: 80%;
@@ -638,6 +806,7 @@ a{
 		position: relative;
     	top: 75px;
     	padding-top: 30px;
+    	margin-bottom: 50px;
 	}
 	.a-section-1{
 		padding: 10px;
@@ -663,7 +832,7 @@ a{
     	/*margin-top: 50px;*/
     	position: relative;
     	margin-left: 25%;
-    	height: 80vh;
+    	height: 85vh;
     	/*display: inline-block;*/
 	}
 	.s-content{
@@ -745,3 +914,9 @@ iframe{
 	transition: all .3s;
 	animation: ani-page .3s;
 }
+
+.a-animate{
+	transition: all .3s;
+	animation: a-ani-page .3s;
+}
+
