--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ a{
 		padding: 10px;
 		text-align: center;
 	}
+	
 	li{
 		list-style-type: none;
 	}
@@ -481,7 +482,10 @@ a{
 		margin-top: 30px;
 	}
 	#caption{
-		width: 65%;
+		width: 70%;
+	}
+	#btn{
+		margin: 20px;
 	}
 	#clickMe{
 		height: 70vh;
@@ -621,7 +625,7 @@ a{
 		padding-top: 55px;
 	}
 	.m-1{
-		height: 67vh;	
+		height: 85vh;	
 	}
 
 	.h-innerContent{
@@ -719,7 +723,6 @@ a{
 	margin-top: 15%;
 	color: white;
 	}
-
 }
 
 /*--------------------------------------------------------*/
